Front end main page changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,7 +82,8 @@ nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #f
 .aaaaaaa{
     width: 80%;
     display: block;
-    height: auto; 
+    height: 65%; 
+
 }
 
 .btn-fb:hover{
