--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,20 @@
 <div class="container">
 
+<% if !@listings_near.nil?%>
+<h1>We found some results...</h1>
+	<%@listings_near.each do |list| %>
+		<ul>
+				<li><%= list.name %>
+				<%= link_to 'Show', listing_path(list) %> | <%= link_to 'Edit', edit_listing_path(list) %> | 
+				  <%= link_to 'Delete', listing_path(list),
+				      		method: :delete,
+				      		data: { confirm: "Are you sure?" } %></li>
+		</ul>
+		<%end%>
+<%end%>
+
+
+
 <h1>All listings</h1>
 		<% @listings.each do |list| %>
 		<ul>
