--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,28 @@ nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #f
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
 
+#footer {
+  background-color: #fafafa;
+  opacity: 20%;
+  padding: 50px 0px;
+  border-radius: 5px;
+}
+
+#footer a {
+     color: #d9534f;
+}
+
+#footer a:hover {
+     color: #bd4746;
+}
+
+#creditcards {
+  width: 300px;
+  height: auto;
+}
+
+
+
 /* LOGIN ELEMENT */
 
 #login-dp{
