--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,22 +1,29 @@
-<div class="container" id="footer">
+<div class="container">
 <hr class="featurette-divider">
 <footer>
-<div class='row'>
-  <div class="col-md-4 col-centered">
+<div class='row' id="footer">
+  <div class="col-md-3">
       <h4>About us</h4> 
-      <hr>
-      <ul>
-      <li>Home</li>
-      <li>About us</li>
-      <li>Contact us</li>
-      <li>Testimonials</li>
-      </ul>
+      <a href="#">Home</a><br>
+      <a href="#">About us</a><br>
+      <a href="#">Contact us</a><br>
+      <a href="#">Testimonials</a><br>
+      
   </div>
-  <div class="col-md-4 col-centered">
-    <h4>Guarantee</h4> 
+  <div class="col-md-3">
+    <h4>For you</h4> 
+    <a href="#">Guarantee</a><br>
+    <a href="#">Trust &amp; Safe</a><br>
+    <a href="#">Testimonials</a><br>
+    <a href="#">Policy</a><br>
+    
   </div>
-  <div class="col-md-4 col-centered">
-    <h4>Contact us</h4> 
+  <div class="col-md-6 col-centered">
+    <h3>Guarantee, Safe &amp; Trust</h3> 
+    <br>
+    <div>
+    <img id="creditcards" src="/img/creditcards.png" />
+    </div>
   </div>
 </div>
  <hr class="featurette-divider">
@@ -27,6 +34,6 @@
   <!-- FOOTER -->
 
   <p class="pull-right"><a href="#">Back to top</a></p>
-  <p>© 2015 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+  <p>© 2015 Airbnb, s.r.o. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
 </footer>
 </div>
