H1 changes and div containers

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
-
-
+<div class="container">
+<h2>Book your stay <small>in <%=@listing.name%></small></h2>
 <%= form_for [@listing, @booking] do |f| %>  
   
 
@@ -25,7 +25,7 @@
 <% end %>
  
 <%= link_to 'Back', @listing %>
-
+</div>
 
 
 <!-- 
@@ -37,7 +37,7 @@
  -->
 
 
-<script src="https://js.braintreegateway.com/v2/braintree.js"></script>
+
 <script>
 // We generated a client token for you so you can test out this code
 // immediately. In a production-ready integration, you will need to
