--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -14,15 +14,14 @@
 <%end%>
 
 
-
 <h1>All listings</h1>
 		<% @listings.each do |list| %>
-		<ul>
-				<li><%= list.name %>
-				<%= link_to 'Show', listing_path(list) %> | <%= link_to 'Edit', edit_listing_path(list) %> | 
-				  <%= link_to 'Delete', listing_path(list),
-				      		method: :delete,
-				      		data: { confirm: "Are you sure?" } %></li>
-			</ul>
+
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href='/listings/<%=list.id%>'>
+             <img src="<%=list.picture[0]%>" class="thumbnail img-responsive">
+        </a>
+    </div>
+
 		<%end%>
 </div>
