--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div id="clearance" class="sign-up">
   <h2><%= t(".title") %></h2>
 
@@ -13,5 +14,4 @@
     </div>
   <% end %>
 </div>
-
-
+</div>
