--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,6 @@
+<div class="container">
 <%= render '/home/confirmation'%>
 <div class="row">
-  <div class="panel panel-default">
-	<div class="panel-body">
-
-
 		<div class="col-md-3">
 
 			  <h1><strong> <%= @user.first_name%> <%=@user.last_name%></strong></h1>
@@ -35,7 +32,6 @@
 					</div> 	<!-- col-md-3 -->
 
     </div>	
-  </div>
 
-</div>  
+</div>
 
