--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -12,7 +12,7 @@
             <p>
               <%= f.date_field :start %>
 
-              <%= f.date_field :end, placeholder: "From" %>
+              <%= f.date_field :end, id: "my-element", class: "datepicker-here", data: {language: 'en', range: true}%>
             </p>
             <div class="bfh-selectbox">
               <%= f.label :price %>: 
@@ -76,6 +76,4 @@
   </div>
 </div>
 
-
-
-<script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
+<!-- <script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script> -->
