--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
+
 <% if !@listings_near.nil?%>
 	<% if !@listings_near.empty?%>
-	<h1>We found some results...</h1>
+	<h2>We found <%=@listings_near.size%> results...</h2>
 		<%@listings_near.each do |list| %>
 			<ul>
-					<li><%= list.name %>
-					<%= link_to 'Show', listing_path(list) %> | <%= link_to 'Edit', edit_listing_path(list) %> | 
-					  <%= link_to 'Delete', listing_path(list),
-					      		method: :delete,
-					      		data: { confirm: "Are you sure?" } %></li>
+			<div class="row">
+					<div class="col-lg-2 col-sm-3 col-xs-4"><img src="<%= list.picture[0] %>" class="thumbnail img-responsive"/>
+					</div>
+					</div>
 			</ul>
 			<%end%>
 		<% else %>
@@ -17,12 +17,13 @@
 <%end%>
 
 
-<h1>All listings</h1>
+<h2>All listings</h2>
 		<% @listings.each do |list| %>
 
     <div class="col-lg-2 col-sm-3 col-xs-4">
         <a href='/listings/<%=list.id%>'>
              <img src="<%=list.picture[0]%>" class="thumbnail img-responsive">
+         <h2>A Movie in the Park:<br />Kung Fu Panda</h2>
         </a>
     </div>
 
