--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -10,12 +10,12 @@
             
             <%= f.label :avaibility %>
             <p>
-              <%= f.date_field :start %>
+              <%= f.date_field :start, id: "calendar", class: "datepicker-here", type: "text", placeholder: "From", data: {language: 'en'} %>
 
-              <%= f.date_field :end, id: "my-element", class: "datepicker-here", data: {language: 'en', range: true}%>
+              <%= f.date_field :end, id: "calendar", class: "datepicker-here", type: "text", placeholder: "To", data: {language: 'en'}%>
             </p>
             <div class="bfh-selectbox">
-              <%= f.label :price %>: 
+              <%= f.label :price %>: $ 
               <%= f.number_field :price %>
             </p>     
 
@@ -76,4 +76,4 @@
   </div>
 </div>
 
-<!-- <script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script> -->
+<script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
