--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,7 +1,8 @@
+<div class="container">
 <h1>Edit Your List</h1>
  
 
- <%= render 'address' %>
+ <%= render 'form' %>
 
 <%= link_to 'Back', listings_path %>
 
@@ -10,3 +11,4 @@
           data: { confirm: 'Are you sure?' } %>
 
  
+</div>
