--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@
  *= require footer
  *= require login
  *= require slider
- *= require booking_box
+ *= require booking_box_sidebar
 */
 
 
@@ -22,10 +22,6 @@
 .search-big {
   height: 45px;
 }
-
-
-
-
 
 
 /* END OF SLIDER */
