--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <div id="clearance" class="sign-up">
   <h2><%= t(".Edit Profile") %></h2>
 
@@ -46,4 +48,5 @@
     </div>
 
   <% end %>
+</div>
 </div>
