User validation + fix google map issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,11 @@
  *= require booking_box_sidebar
 */
 
-
+.fb {
+    width: 20%;
+    display: block;
+    height: auto; 
+}
 
 .h1-top-margin {
   margin-top: 0px;
