--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -75,3 +75,5 @@
     </div>
   </div>
 </div>
+
+  <script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
