--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
 <div id="clearance" class="sign-up">
+
+  <p>
+    <a href="/auth/facebook"><img class="fb" src="/img/fbconnect.png" /></a>
+  </p>
+
   <h2><%= t(".title") %></h2>
 
   <%= form_for @user do |form| %>
