--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,11 @@
 
 
   <!-- MAP GOOGLE -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['GOOGLE_MAP']%>  
-&callback=initMap" async defer></script>
+
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <!-- for JT search -->
-  <script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
+
   <!-- END MAP GOOGLE -->
 
 </head>
@@ -47,17 +46,15 @@
 
 </div> -->
 
-
-<!-- Button trigger modal -->
-<div class="container">
-<%=render 'users/new'%>
-
-    <div id="flash">
+    <div class="container" id="flash">
       <% flash.each do |key, value| %>
         <div class="flash <%= key %>"><%= value %></div>
       <% end %>
     </div>
-</div>
+
+<!-- Button trigger modal -->
+
+
 <!-- 
 <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#Login-pop">
     Launch Normal Form
