--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -12,3 +12,5 @@
 
  
 </div>
+
+  <script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
