--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -65,9 +65,8 @@
 				<p><strong>Description:</strong><br></p>
 				<p><%= @listing.body %></p>
 				<hr>
-
 				<h3>User information</h3>
-				<br>
+				<hr>
 					<div class="pull-left text-center">
 						<img class="img-circle img-responsive" src="<%=@listing.user.picture.thumb.url%>">
 
@@ -116,26 +115,26 @@
 			</div>
 	</div> <!-- col-md-4 -->
 
-
 </div>
-
-
 				<div>
 					<%if @listing.nearbys(100).nil?%>
 					<%else%>
+					<hr>
 					<h3>Nearby places</h3>	
-					<br>
-
+					<hr>
 						<% for listing in @listing.nearbys(100)%>
 						<%= link_to image_tag("#{listing.picture[0].thumb}", class: "img-thumbnail") , listing %>  (<%= listing.distance.round(2) %> km away)
 						<%end%>
-					<%end%>
+						<%end%>
 				</div>
 </div>
 <br><br>
 
 <%= render 'listings/message' %>
 <div id="map"> </div>	
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['GOOGLE_MAP']%>  
+&callback=initMap" async defer></script>
 
 
 
