--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -67,7 +67,7 @@
 				<hr>
 				<h3>User information</h3>
 				<hr>
-					<div class="pull-left text-center">
+					<div class="pull-left user-profile text-center">
 						<img class="img-circle img-responsive" src="<%=@listing.user.picture.thumb.url%>">
 
 
