--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -10,9 +10,9 @@
             
             <%= f.label :avaibility %>
             <p>
-              <%= f.date_field :start, id: "calendar", class: "datepicker-here", type: "text", placeholder: "From", data: {language: 'en'} %>
+              <%= f.date_field :start, id: "calendar", class: "datepicker-here", type: "text", placeholder: "From" %>
 
-              <%= f.date_field :end, id: "calendar", class: "datepicker-here", type: "text", placeholder: "To", data: {language: 'en'}%>
+              <%= f.date_field :end, id: "calendar", class: "datepicker-here", type: "text", placeholder: "To"%>
             </p>
             <div class="bfh-selectbox">
               <%= f.label :price %>: $ 
