--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-<%= render '/home/confirmation'%>
 <div class="row">
 		<div class="col-md-3">
 
@@ -14,22 +13,25 @@
 		<div class="col-md-3">
 		<br>
 			<%= image_tag @user.picture.thumb.url, :class => 'img-thumbnail' if @user.picture?%>
-		</div>		
-	
+		</div>
 
+	<div class="col-md-3">
 
+		<h3>Your Booking</h3>
+		<% @user.bookings.each do |book| %>
+			<a href="/bookings/<%=book.id%>"><%=book.listing.name%></a><br>
+		<%end%>
 
-					<div class="col-md-3">
+	</div> 	<!-- col-md-3 -->
 
-						<h3>Your Booking</h3>
+	<div class="col-md-3">
 
-					</div> 	<!-- col-md-3 -->
+		<h3>Your Listings</h3>
+		<% @user.listings.each do |list| %>
+		<a href="/listings/<%=list.id%>"><%=list.name%></a></br>
+		<%end%>
 
-					<div class="col-md-3">
-
-						<h3>Your Listings</h3>
-
-					</div> 	<!-- col-md-3 -->
+	</div> 	<!-- col-md-3 -->
 
     </div>	
 
