--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,85 +5,77 @@
 
 <h1 class="h1-top-margin">It is time to start living. <small>there is no perfect timing</small></h1>
 <br>
-<div id="custom-search-input">
-	<%= form_tag listings_path, method: :get do %>
-	  <div class="input-group col-md-8 col-centered">
-					<%= text_field_tag :search, params[:search], placeholder: "Search places you'd love to visit", class: 'search-query form-control search-big' %>
-					<span class="input-group-btn col-centered">
-							<%= button_tag type: 'submit', class: 'btn btn-danger btn-lg' do %>
-							<span class="glyphicon glyphicon-search"></span>
-						<%end%>
-					</span>
-		</div>
-	<%end%>	
-</div>	
+        <div id="custom-search-input">
+        	<%= form_tag listings_path, method: :get do %>
+        	  <div class="input-group col-md-8 col-centered">
+        					<%= text_field_tag :search, params[:search], placeholder: "Search places you'd love to visit", class: 'search-query form-control search-big' %>
+        					<span class="input-group-btn col-centered">
+        							<%= button_tag type: 'submit', class: 'btn btn-danger btn-lg' do %>
+        							<span class="glyphicon glyphicon-search"></span>
+        						<%end%>
+        					</span>
+        		</div>
+        	<%end%>	
+        </div>	
 <br><br><br><br>
-
-
-<div class="clearfix"></div>
-
-
-  <div class="row" id="places">
-    <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/1.png" class="thumbnail img-responsive">
-        </a>
-    </div>
-     <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/2.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-     <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/3.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-     <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/4.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-  </div>
-  <div class="row">  
-    <div class="col-lg-4 col-sm-6 col-xs-12">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/9.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-     <div class="col-lg-4 col-sm-6 col-xs-12">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/10.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-  </div>  
-  <div class="row">  
-    <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/5.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-    <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/6.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-    <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/7.jpg" class="thumbnail img-responsive">
-        </a>
-    </div>
-    <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href="<%=listings_path%>">
-             <img src="img/gallery/8.jpg" class="thumbnail img-responsive">
-        </a>
-    </div> 
-  </div>
-  
-
 </center>
-  
 
+      <div class="row" id="places">
+        <div class="col-lg-2 col-lg-offset-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/1.png" class="thumbnail img-responsive">
+            </a>
+        </div>
+         <div class="col-lg-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/2.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+         <div class="col-lg-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/3.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+         <div class="col-lg-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/4.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+      </div>
+      <div class="row">  
+        <div class="col-lg-4 col-lg-offset-2 col-sm-6 col-xs-12">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/9.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+         <div class="col-lg-4 col-sm-6 col-xs-12">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/10.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+      </div>  
+      <div class="row">  
+        <div class="col-lg-2 col-lg-offset-2 col-sm-2 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/5.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+        <div class="col-lg-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/6.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+        <div class="col-lg-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/7.jpg" class="thumbnail img-responsive">
+            </a>
+        </div>
+        <div class="col-lg-2 col-sm-3 col-xs-4">
+            <a href="<%=listings_path%>">
+                 <img src="img/gallery/8.jpg" class="thumbnail img-responsive">
+            </a>
+        </div> 
+      </div>
 <hr>
 
 <center>
