--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <div id="clearance" class="sign-up">
-
+<%byebug%>
   <p>
     <a href="/auth/facebook"><img class="fb" src="/img/fbconnect.png" /></a>
   </p>
@@ -9,10 +9,6 @@
 
   <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
-
-    <div class="submit-field">
-      <%= form.submit %>
-    </div>
 
     <div class="other-links">
       <%= link_to t(".sign_in"), sign_in_path %>
