show listing + index fix

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -117,7 +117,7 @@
 
 </div>
 				<div>
-					<%if @listing.nearbys(100).nil?%>
+					<%if @listing.nearbys(100).empty?%>
 					<%else%>
 					<hr>
 					<h3>Nearby places</h3>	
