--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,12 +4,14 @@
 	<% if !@listings_near.empty?%>
 	<h2>We found <%=@listings_near.size%> results...</h2>
 		<div class="row">
-		<ul>
 			<%@listings_near.each do |list| %>
-					<a href="/listings/<%=list.id%>"<div class="col-lg-2 col-sm-3 col-xs-4"><img src="<%=list.picture[0].url%>" class="thumbnail img-responsive"/></a></br>
+			<div class="col-lg-2 col-sm-3 col-xs-4">
+				<a href="/listings/<%=list.id%>">
+					<img src="<%=list.picture[0].url%>" class="thumbnail img-responsive"/>
+				</a>
+			</div>
 			<%end%>
-		</ul>
-		</div>
+		
 		<% else %>
 		<h3> We did not find anything, sorry. Check all of our listings </h3>	
 	<%end%>		
